[#118] - Corrigindo bug de conteudo da página ter um shift para a esquerda
CoAuthored-by: Nicalo Ribeiro <nicalo63@gmail.com>

--- a/frontend/public/listagem_formulario/styles/listForms.css
+++ b/frontend/public/listagem_formulario/styles/listForms.css
@@ -1,5 +1,6 @@
 body{
     background: white;
+    display: contents;
 }
 .formBox{
     min-height: 100px;
