--- a/frontend/public/manter_formulario/styles/novoformulario.css
+++ b/frontend/public/manter_formulario/styles/novoformulario.css
@@ -1,3 +1,8 @@
+body{
+  background: white;
+  display: contents;
+}
+
 .backGround {
   display: flex;
   justify-content: space-evenly;  
